stretch/manifests/overlays/cloud/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-101
  namespace: cloud-native-101
spec:
  template:
    spec:
      containers:
        - name: app
