stretch/manifests/overlays/cloud/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cloud-native-101-gateway
  namespace: cloud-native-101
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: cloud-native-101-route
